<!--
  To test locally, first 'sbt akka-grpc-maven-plugin:publishM2' in the parent dir
  and define the published version as akka.grpc.project.version in the properties block below
  or pass it to mvn when running like so: mvn -Dakka.grpc.project.version=some-version compile exec:exec
-->
<project>
  <modelVersion>4.0.0</modelVersion>
  <name>Akka gRPC Java example project</name>
  <groupId>com.lightbend.akka.grpc</groupId>
  <artifactId>grpc-plugin-tester-java</artifactId>
  <version>0.1-SNAPSHOT</version>

  <properties>
    <maven.compiler.release>11</maven.compiler.release>
    <maven-dependency-plugin.version>3.7.1</maven-dependency-plugin.version>
    <maven-exec-plugin.version>3.0.0</maven-exec-plugin.version>
    <akka.http.cors.version>1.1.0</akka.http.cors.version>
    <akka.version>2.10.5</akka.version>
    <grpc.version>1.73.0</grpc.version> <!-- checked synced by VersionSyncCheckPlugin -->
    <project.encoding>UTF-8</project.encoding>
    <build-helper-maven-plugin>3.3.0</build-helper-maven-plugin>
    <protobuf-java.version>3.22.2</protobuf-java.version>
    <proto-google-common-protos.version>2.28.0</proto-google-common-protos.version>
  </properties>

  <repositories>
    <repository>
      <id>akka-repository</id>
      <name>Akka library repository</name>
      <url>https://repo.akka.io/maven/github_actions</url>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>akka-repository</id>
      <name>Akka library repository</name>
      <url>https://repo.akka.io/maven/github_actions</url>
    </pluginRepository>
  </pluginRepositories>

  <dependencies>
    <dependency>
      <groupId>com.lightbend.akka.grpc</groupId>
      <artifactId>akka-grpc-runtime_2.13</artifactId>
      <version>${akka.grpc.project.version}</version>
    </dependency>
    <dependency>
      <groupId>com.typesafe.akka</groupId>
      <artifactId>akka-pki_2.13</artifactId>
      <version>${akka.version}</version>
    </dependency>

    <!-- Needed for the generated client -->
    <dependency>
      <groupId>io.grpc</groupId>
      <artifactId>grpc-stub</artifactId>
      <version>${grpc.version}</version>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>${maven-dependency-plugin.version}</version>
        <executions>
          <execution>
            <id>getClasspathFilenames</id>
            <goals>
              <!-- provides the jars of the classpath as properties inside of maven
                   so that we can refer to one of the jars in the exec plugin config below -->
              <goal>properties</goal>
            </goals>
          </execution>

          <!--  #unpack-protos -->
          <execution>
            <id>unpack</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>unpack</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>com.google.protobuf</groupId>
                  <artifactId>protobuf-java</artifactId>
                  <version>${protobuf-java.version}</version>
                  <type>jar</type>
                  <overWrite>true</overWrite>
                  <outputDirectory>${project.build.directory}/proto</outputDirectory>
                  <includes>**/*.proto</includes>
                </artifactItem>
                <artifactItem>
                  <groupId>com.google.api.grpc</groupId>
                  <artifactId>proto-google-common-protos</artifactId>
                  <version>${proto-google-common-protos.version}</version>
                  <type>jar</type>
                  <overWrite>true</overWrite>
                  <outputDirectory>${project.build.directory}/proto</outputDirectory>
                  <includes>**/*.proto</includes>
                </artifactItem>
              </artifactItems>
              <overWriteReleases>false</overWriteReleases>
              <overWriteSnapshots>true</overWriteSnapshots>
            </configuration>
          </execution>
          <!--  #unpack-protos -->

        </executions>
      </plugin>

      <plugin>
        <groupId>com.lightbend.akka.grpc</groupId>
        <artifactId>akka-grpc-maven-plugin</artifactId>
        <version>${akka.grpc.project.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>generate</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <generatorSettings>
            <serverPowerApis>true</serverPowerApis>
            <!-- not possible to use together with power APIs -->
            <generateScalaHandlerFactory>false</generateScalaHandlerFactory>
          </generatorSettings>
          <includeStdTypes>true</includeStdTypes>
          <language>Java</language>
          <!--  #all-proto-paths -->
          <protoPaths>
            <protoPath>target/proto</protoPath>
            <protoPath>src/main/proto</protoPath>
            <protoPath>src/main/protobuf</protoPath>
          </protoPaths>
          <!--  #all-proto-paths -->
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>${maven-exec-plugin.version}</version>
        <configuration>
          <executable>java</executable>
          <arguments>
            <argument>-classpath</argument>
            <classpath />
            <argument>example.myapp.helloworld.GreeterServer</argument>
          </arguments>
        </configuration>
      </plugin>

    </plugins>
  </build>

</project>
